<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/com.pocket.shoppee">
       
     <RelativeLayout
        android:id="@+id/linearhorizontalheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/header"
        android:layout_alignParentTop="true">
        
         <TextView
	       android:id="@+id/title"
	       android:layout_height="wrap_content"
	       android:layout_width="wrap_content"
	       android:layout_centerHorizontal="true"
	       android:layout_centerVertical="true"
	       android:text="Featured"
	       android:textColor="#FFFFFF"
	       android:textSize="22sp"/>
         
	   <!-- Button
	       android:id="@+id/title"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:background="@android:color/transparent"
	       android:layout_marginLeft="450dp"
	       android:text="Featured"
	       android:textColor="#FFFFFF"
	       android:textSize="22sp" /-->
   </RelativeLayout>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:scrollbarStyle="insideOverlay" app:radius="7dp" app:fillColor="#FF6600" app:strokeColor="#7A797A"
        android:padding="10dip" />
    
    <LinearLayout
        android:id="@+id/linearhorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/tabbar"
        android:layout_alignParentBottom="true">
        
        <Button
            android:id="@+id/featured_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="350dp"
            android:drawableTop="@drawable/featured_icon"
            android:background="@drawable/selected_nav"
            android:text="@string/featured"
            android:textColor="#FFFFFF" 
            android:textSize="12sp"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_spacer"/>
        
        <Button 
            android:id="@+id/shop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/shop_icon"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF" 
            android:textSize="12sp"
            android:text="@string/shop"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_spacer"/>
		
		<Button
            android:id="@+id/favorite_button" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/favorite_icon"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF" 
            android:textSize="12sp"
            android:text="@string/favorite"/>
		
		<ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_spacer"/>
        
        <Button 
            android:id="@+id/notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/notification_icon"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF" 
            android:textSize="12sp"
            android:text="@string/notification"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_spacer"/>
        
        <Button 
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/setting_icon"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF" 
            android:textSize="12sp"
            android:text="@string/setting"/>
        
    </LinearLayout>
</LinearLayout>